assets/scss/components/footer/_footer.scss
.site-footer {
	padding-block-start: 1.3rem;
	padding-block-end: 1.3rem;
	border-block-start: 2px solid var(--color-black);
	display: grid;
	row-gap: 1em;
	
	@media (max-width: 47.9375em) {
		grid-template-columns: repeat(2, 50%);
		grid-template-rows: auto auto;
	}

	@media (min-width: 48em) {
		grid-template-columns: repeat(3, calc(100% / 3));
		grid-template-rows: auto;
	}
	
}

.footer-info {
	@media (max-width: 47.9375em) {
		grid-column: 1 / 2;
		grid-row: 2 / 3;
	}

	.footer-info__title {
		font-size: clamp(calc(12rem / 16), 2.5vw, calc(18rem / 16));
		text-transform: uppercase;
		font-weight: 600;
		line-height: calc(21.13 / 18);
	}
	
	.footer-info__address {
		font-style: normal;
		font-size: clamp(calc(12rem / 16), 2.5vw, calc(14rem / 16));
		line-height: calc(17 / 14);
		
		p {
			margin: initial;
		};
		
	}
}


.footer-links {
	font-size: clamp(calc(14rem / 16), 2.5vw, calc(18rem / 16));
	text-transform: uppercase;
	font-weight: 600;
	text-align: left;
	grid-row: 1 / 2;
	padding-inline-start: 1em;

	@media (max-width: 47.9375em) {
		justify-self: start;
		grid-column: 1 / 3;
	}

	@media (min-width: 48em) {
		justify-self: center;
		grid-column: 2 / 3;
	}

	.footer-links__link {
		position: relative;
		transform: translateX(0);
		transition: transform .2s ease-in-out;
		
		&:hover, &:focus {
			transform: translateX(1em);
			&::before {
				opacity: 0;
				transform: translateX(-400%);
			}
		}

		&:focus-within {
			transform: translateX(1em);
		}

		@include list-item-bullet;

		a {
			text-decoration: none;

			&:focus {
				// text-decoration: underline;
			}
			
			&:focus:not(:focus-visible) {
				outline: none;
			} 
			
			&:focus-visible {
				outline: none;
				text-decoration: underline;
			}

			&:hover {
				text-decoration: underline;
			}
		}
	}
}

.footer__social-links {
	justify-self: flex-end;
	margin-inline-end: 11px;

	@media (max-width: 47.9375em) {
		grid-column: 2 / 3;
		grid-row: 2 / 3;
	}

	ul {
		margin: initial;
		padding: initial;
		list-style: none;
		display: flex;

		@supports ( gap: 4px) {
			gap: 4px;
		}
	}
	
	.social-links__item {
		@supports ( not(gap: 4px)) {
			padding-inline-start: 2px;
			padding-inline-end: 2px;
		}
		a, svg {
			display: block;
		}
	}

	svg {
		fill: var(--color-black);
		width: clamp(calc(28rem / 16), 7.7vw, calc(35rem / 16))
	}
}

